--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "@storybook/preset-create-react-app": "^3.2.0",
     "@typescript-eslint/eslint-plugin": "^5.4.0",
     "@typescript-eslint/parser": "^5.4.0",
+    "chromatic": "^6.0.6",
     "eslint": "^7.32.0",
     "eslint-config-airbnb": "^19.0.1",
     "eslint-import-resolver-typescript": "^2.5.0",
