remove lint-staged and husky

--- a/package.json
+++ b/package.json
@@ -55,9 +55,7 @@
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jsx-a11y": "^6.5.1",
     "eslint-plugin-react": "^7.27.1",
-    "eslint-plugin-react-hooks": "^4.3.0",
-    "husky": "^7.0.4",
-    "lint-staged": "^12.1.2"
+    "eslint-plugin-react-hooks": "^4.3.0"
   },
   "eslintConfig": {
     "overrides": [
@@ -70,16 +68,5 @@
         }
       }
     ]
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.js": ["eslint --fix"],
-    "*.ts": ["eslint --fix"],
-    "*.jsx": ["eslint --fix"],
-    "*.tsx": ["eslint --fix"]
   }
 }
