add script stylelint and add ci

--- a/.github/workflows/.ESLint.yaml
+++ b/.github/workflows/.ESLint.yaml
@@ -24,3 +24,5 @@ jobs:
         run: npm i
       - name: Run ESLint
         run: npm run lint
+      - name: Run Stylelint
+        run: npm run stlint
