--- a/.stylelintrc.json
+++ b/.stylelintrc.json
@@ -1,17 +1,13 @@
 {
-  "extends": [
-    "stylelint-config-standard",
-    "stylelint-config-recess-order"
-  ],
-  "plugins": [
-    "stylelint-selector-bem-pattern"
-  ],
+  "extends": ["stylelint-config-standard", "stylelint-config-recess-order"],
+  "plugins": ["stylelint-selector-bem-pattern"],
   "rules": {
     "plugin/selector-bem-pattern": {
-      "componentName": "[A-Z]+",
+      "componentName": "^[A-Za-z-]+",
+      "allowedTags": "h[1-6]|ul|li|a",
       "componentSelectors": {
-        "initial": "^\\.{componentName}(?:-[a-z]+)?$",
-        "combined": "^\\.combined-{componentName}-[a-z]+$"
+        "initial": "^\\.{componentName}(?:(__|--)\\w[\\w-_]*)?$",
+        "combined": "^(\\.{componentName}(?:(__|--)\\w[\\w-_]*)?|${allowedTags})$"
       },
       "utilitySelectors": "^\\.util-[a-z]+$"
     }
