--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
+    "react-syntax-highlighter": "^15.4.5",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-selector-bem-pattern": "^2.1.1",
     "typescript": "^4.5.2",
